2020-10-12 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.4.2

2020-07-14 Fabio Tomat <f.t.public@gmail.com>
	* New Friulian translation of the messages.

2020-04-28 Roland Illig <roland.illig@gmx.de>
	* Updated German translations of messages and manual.

2019-10-27 pan93412 <pan93412@gmail.com>
	* po/zh_TW.po: Updated Traditional Chinese translation.

2019-09-24 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.4.1

2018-12-01 Than Ngo <ngothan@users.sourceforge.net>
	* common.c: Fixed issues reported by Coverity Scan
	  See https://sourceforge.net/p/dos2unix/bugs/18/

2018-10-09 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Flush printf output stream before changing Windows console
	  cp in utf8 mode. This to prevent issues. Although I did not see any.

2018-08-06 kirotawa <kirotawa@users.sourceforge.net>
	* dos2unix.c, unix2dos.c: Fixed a minor memory leak.
	  See https://sourceforge.net/p/dos2unix/bugs/17/

2018-07-21 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Fix: Add RPM_LD_FLAGS instead of RPM_OPT_FLAGS to LDFLAGS.

2017-10-10 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.4.0

2017-09-24 Sebastian Rasmussen
	* Fixed typos in code and documentation.

2017-09-11 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: When --allow-chown is used put the same read/write
	  permissions as in new file mode.
	* man/man1/dos2unix.pod: Updated.

2017-09-05 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Option -V shows if dos2unix has support for preserving
	  the user and group ownership of files.
	* common.c: New option --allow-chown to allow file ownership change
	  in old file mode. Option --no-allow-chown does the opposite.
	  Thanks to RedHat bug: 1483633 - Add option to force in-place conversion
	  even if ownership cannot be preserved
	  https://bugzilla.redhat.com/show_bug.cgi?id=1483633

2017-08-05 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Build all text and html manual files when ENABLE_NLS=1.